--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
       </svg>
     </button>
     </div>
-    <script src="gallery-items.js" type="module"></script>
+    <script src="./js/gallery-items.js" type="module"></script>
   </body>
 </html>
